<resources>
    <string name="app_name">Multiply Everywhere</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Trainer</string>
    <string name="title_notifications">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="nameRequest">What is your name?</string>
    <string name="login_error_empty">Please, enter correct name</string>
    <string name="login_error_length">Your name is too long</string>
    <string name="login_error_user_exist">This user already exist, try another name</string>
    <string name="Greetings">Hello </string>
    <string name="level_text"></string>
    <string name="day_achievement_progress_text">You have been training for 0 days</string>
    <string name="excellent_achievement_progress_text">Training without errors</string>
    <string name="level_achievement_progress_text">Your level is</string>
    <string name="more_achievements_button">See more</string>
    <string name="text_system_settings">System</string>
    <string name="text_profile_settings">Profile</string>
    <string name="text_set_language">Change language</string>
    <string name="button_add_user">Add user</string>
    <string name="switch_sound">Sounds</string>
    <string name="button_change_user">Change user</string>
    <string name="button_delete_user">Delete user</string>
    <string name="switch_notifications">Notifications</string>
    <string name="alert_dialog_text_add_new_user_title">Add new user</string>
    <string name="alert_dialog_text_add_new_user_question">Are you sure you want to create a new user?</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="settings_title">Settings</string>
    <string name="version_title">Version</string>
    <string name="app_version_text">multiply-everywhere 1.0</string>
    <string name="button_about_us_text">About me</string>
    <string name="statistics_title_text">Statistics</string>
    <string name="change_profile_text">Change profile</string>
    <string name="question_delete_user">Are you sure you want to delete a current user?</string>
    <string name="title_delete_user">Delete user</string>
    <string name="achievements_title">Achievements</string>
    <string name="language_item_russian">Russian</string>
    <string name="language_item_english">English</string>
    <string name="language_item_kazakh">Kazakh</string>
    <string name="edit_photo_title">Edit profile image</string>
    <string name="start_button_text">Start training!</string>
    <string name="next_question_text">Next question</string>
    <string name="win_text">You win!</string>
    <string name="points_text">points</string>
    <string name="continue_text">Continue</string>
    <string name="fail_text">You are failed</string>
    <string name="try_again_text">Try again!</string>
    <string name="soon_text">Soon</string>
    <string name="no_results_yet">No results yet</string>
    <string name="error_sound">Audio playback error</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sound_enabled">Sound enabled</string>
    <string name="sound_disabled">Sound disabled</string>
</resources>