<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_green"
    tools:context=".ui.profile.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_border_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/cat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="40sp"
            android:text="User name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_light"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@id/progressBar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/custom_purple"
            android:clickable="true"
            android:src="@drawable/pensil"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:tint="@color/text_color"
            tools:ignore="SpeakableTextPresentCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:indeterminateOnly="false"
            android:progress="100"
            android:progressDrawable="@drawable/circle_progress"
            android:rotation="-90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/Statistics"
                android:layout_width="match_parent"
                android:textSize="30sp"
                android:textColor="@color/text_color"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/statistics_title_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:background="@drawable/rounded_border_rectangle"
                android:layout_height="300dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/rounded_border_rectangle_white"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false" />

                    <TextView
                        android:id="@+id/no_results_yet_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/text_color_dark"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="@+id/barChart"
                        app:layout_constraintEnd_toEndOf="@+id/barChart"
                        app:layout_constraintStart_toStartOf="@+id/barChart"
                        app:layout_constraintTop_toTopOf="@+id/barChart" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/achievements_text"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/achievements_title"
                android:textColor="@color/text_color"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout" />
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_border_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievements_text">


<!--        <TableLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_margin="10dp">-->

<!--            <TableRow-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp">-->

<!--                <ImageView-->
<!--                    android:id="@+id/regular_achievement_image"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/day_achievent" />-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_gravity="center">-->

<!--                    <TextView-->
<!--                        android:id="@+id/day_achievement_progress_number"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center"-->
<!--                        android:textSize="17sp"-->

<!--                        android:text="0/3" />-->

<!--                    <ProgressBar-->
<!--                        android:id="@+id/day_achievement_progress_bar"-->
<!--                        style="?android:attr/progressBarStyleHorizontal"-->
<!--                        android:layout_width="200dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/day_achievement_progress_text"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:gravity="center"-->
<!--                        android:text="@string/day_achievement_progress_text"-->
<!--                        android:textColor="@color/text_color_dark"-->
<!--                        android:textSize="15sp" />-->

<!--                    <RatingBar-->
<!--                        android:id="@+id/ratingBarDay"-->
<!--                        android:layout_width="180dp"-->
<!--                        android:progressTint="@color/custom_yellow"-->
<!--                        android:clickable="false"-->
<!--                        android:rating="5"-->
<!--                        android:layout_gravity="center"-->
<!--                        style="?android:attr/ratingBarStyleIndicator"-->
<!--                        android:layout_height="wrap_content" />-->
<!--                </LinearLayout>-->

<!--            </TableRow>-->

<!--            <TableRow-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp">-->

<!--                <ImageView-->
<!--                    android:id="@+id/excellent_achievement_image"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/day_achievent" />-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginLeft="10dp"-->

<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:id="@+id/excellent_achievement_progress_number"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center"-->
<!--                        android:text="0/1"-->
<!--                        android:textSize="17sp" />-->

<!--                    <ProgressBar-->
<!--                        android:id="@+id/excellent_achievement_progress_bar"-->
<!--                        style="?android:attr/progressBarStyleHorizontal"-->
<!--                        android:layout_width="200dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:progressTint="@color/custom_purple" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/excellent_achievement_progress_text"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:gravity="center"-->
<!--                        android:text="@string/excellent_achievement_progress_text"-->
<!--                        android:textColor="@color/text_color_dark"-->
<!--                        android:textSize="15sp" />-->

<!--                    <RatingBar-->
<!--                        android:id="@+id/ratingBarExcellent"-->
<!--                        android:layout_width="180dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:backgroundTint="@color/custom_yellow"-->
<!--                        android:clickable="false"-->
<!--                        android:rating="5"-->
<!--                        android:layout_gravity="center"-->
<!--                        style="?android:attr/ratingBarStyleIndicator"-->
<!--                        android:progressTint="@color/custom_yellow" />-->
<!--                </LinearLayout>-->


<!--            </TableRow>-->

<!--            <TableRow-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp">-->

<!--                <ImageView-->
<!--                    android:id="@+id/level_achievement_image"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/day_achievent" />-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginLeft="10dp"-->

<!--                    android:orientation="vertical">-->

<!--                    <TextView-->
<!--                        android:id="@+id/level_achievement_progress_number"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center"-->
<!--                        android:text="1/3"-->
<!--                        android:textSize="17sp" />-->

<!--                    <ProgressBar-->
<!--                        android:id="@+id/level_achievement_progress_bar"-->
<!--                        style="?android:attr/progressBarStyleHorizontal"-->
<!--                        android:layout_width="200dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:progressTint="@color/custom_purple" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/level_achievement_progress_text"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:gravity="center"-->
<!--                        android:text="@string/level_achievement_progress_text"-->
<!--                        android:textColor="@color/text_color_dark"-->
<!--                        android:textSize="15sp" />-->

<!--                    <RatingBar-->
<!--                        android:id="@+id/ratingBarLevel"-->
<!--                        android:layout_width="180dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:backgroundTint="@color/custom_yellow"-->
<!--                        android:clickable="false"-->
<!--                        android:rating="5"-->
<!--                        android:layout_gravity="center"-->
<!--                        style="?android:attr/ratingBarStyleIndicator"-->
<!--                        android:progressTint="@color/custom_yellow" />-->
<!--                </LinearLayout>-->


<!--            </TableRow>-->
<!--        </TableLayout>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soon_text"
                    android:layout_margin="20dp"
                    android:textSize="30sp"
                    android:textColor="@color/text_color_dark"
                    android:layout_gravity="center"
                    ></TextView>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/heart"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    >

                </ImageView>
    </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>